--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,8 @@
 html, body { width:100%; height:100%; margin:0; padding:0; z-index: 1; }
 #markdown {display: none;}
 #map { width:100%; height:600px;  margin:0; padding:0px; z-index: 1}
-h1,h2,.cm-header-1, .cm-header-2 {font-size: 110% !important}
+h1,h2,.cm-header-1, .cm-header-2 {font-size: 110% !important; font-weight: 700}
+h3,.cm-header-3 {font-size: 100% !important}
 .CodeMirror {
 	height: 500px;
 }
